# flashbp

flashbp/: .gitignore  CMakeLists.txt  STYLE.md  pyproject.toml
flashbp/evaluations/: _common.py  _decoder_adapters.py  active_cycles.py  animate_bp.py  animate_gbp.py  animate_ml.py  bp_oscillations.py  cache_failures.py  cycles.py  detector_distance.py  final_bp.py  final_ml.py  gbp_policy_delta.py  gbp_region_diagnostics.py  gbp_region_search.py  gbp_sparsity.py  render_syndrome.py  run_cache.all.sh  run_shots.py  run_threshold.all.sh  run_threshold.tracable.sh  single_shot.py  sweep_cache_failures.py  threshold_sweep.py  tree_bp_detections.py  treeify_detections.py
flashbp/experiments/min-region/: README.md  analyze.py  run.py  run.sh
flashbp/scripts/: compile.sh
flashbp/src/: _flashbp.cpp  flashbp_core.cpp  flashbp_core.h  torch_backend.cpp  torch_backend.h
flashbp/src/decoders/: decoder.h  degree_decoder.cpp  degree_decoder.h  fvs_decoder.cpp  fvs_decoder.h  gbp_backend.cpp  gbp_backend.h  gbp_decoder.cpp  gbp_decoder.h  gbp_region_policy.cpp  gbp_region_policy.h  ml_decoder.cpp  ml_decoder.h  simple_decoder.cpp  simple_decoder.h  surprise_ml_decoder.cpp  surprise_ml_decoder.h  tensor_decoder.cpp  tensor_decoder.h
flashbp/src/flashbp/: __init__.py  config.py
flashbp/src/flashbp/analytics/: __init__.py  bp_oscillation.py  cycles.py  detector_distance.py  gbp.py  gbp_policy_delta.py  gbp_region_diagnostics.py  gbp_region_search.py  gbp_sparsity.py  ml_surprise.py  style.py  syndrome.py  tanner.py  tree_bp.py  treeify.py
flashbp/src/flashbp/animation/: __init__.py  contraction.py  cycles.py  frames.py  gbp.py  layout.py  pipeline.py  surprise.py  video.py
flashbp/src/flashbp/codes/: __init__.py  _gf2.py  base.py  bb.py  steane.py  surface.py
flashbp/src/loggers/: decode_logger.h  gbp_logger.h  logger.h  ml_logger.h  record_logger.h  tensor_logger.h
